Fixing wrapping of text on journals to account for larger titles

--- a/web/template.css
+++ b/web/template.css
@@ -222,13 +222,14 @@ nav[role="side"] li a:hover{
 }
 
 .journalTitle{
+    width: 180px;
     position:absolute;
-      top:36%;
-      left:0; 
-      right:0;
-      font-weight: bold;
-      text-align:center;
-      strong {display:block;}
+    top:20%;
+    left:17%; 
+    right:0;
+    font-weight: bold;
+    text-align:center;
+    strong {display:block;}
     
 }
 
